--- a/src/style/css/index.scss
+++ b/src/style/css/index.scss
@@ -7,4 +7,5 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,300,400,500,700');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500,700');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
