--- a/src/style/css/portfolio.scss
+++ b/src/style/css/portfolio.scss
@@ -3,10 +3,6 @@
     font-size: 20px;
     background-color: #282C35;
     color: #fafafa;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    perspective: 800px;
 
     h1 {
         font-family: "Open Sans", sans-serif;
@@ -28,50 +24,34 @@
         flex-wrap: wrap;
         justify-content: center;
     }
-
-    .explore {
+    .modal {
+        z-index: 160;
         position: fixed;
-        border-radius: 50%;
-        background-color: red;
-        top: 0;
-        left: 0;
-        width: 100px;
-        height: 100px;
-        box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.7);
+        top: 60px;
+        bottom: 60px;
+        left: 20%;
+        right: 20%;
+        padding: 20px;
+        background-color: #fafafa;
+        color: rgb(20, 20, 20);
     }
 
     .card {
         box-sizing: border-box;
         flex: 1;
-
-        width: 200px;
+        min-width: 200px;
+        max-width: 200px;
         height: 200px;
+        position: relative;
         margin: 10px;
         text-align: center;
-        // background-color: #bdbdbd;
         color: #fafafa;
-        position: absolute;
         transform-style: preserve-3d;
-        transform: translateZ(-100px);
+        transform: perspective(800px) translateZ(0);
         transition: transform 0.4s ease-out;
 
-        &:hover {
-            transform: translateZ(-100px) rotateY(90deg);
-            .card-cover {
-                // transform: rotateY(90deg);
-            }
-            .card-reveal {
-                // transform: rotateY(0deg);
-            }
-            .card-text {
-                // color: rgb(24, 24, 28);
-                // h1 {
-                //     font-size: 55px;
-                //     @media only screen and (max-width: 768px) {
-                //         font-size: 42px;
-                //     }
-                // }
-            }
+        &.flipped {
+            transform: perspective(800px) translateZ(0) rotateY(180deg);
         }
 
         .card-cover {
@@ -79,14 +59,14 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(141deg, #AB47BC 0%,  #26C6DA 90%);
-            transform: rotateY(0deg) translateZ(100px);
+            transform: rotateY(0deg) translateZ(0px);
         }
 
         .card-reveal {
             position: absolute;
             width: 100%;
             height: 100%;
-            transform: rotateY(-90deg) translateZ(100px);
+            transform: rotateY(-180deg) translateZ(0px);
 
             .card-bg {
                 position: absolute;
@@ -113,7 +93,7 @@
                     margin: auto;
                     font-size: 42px;
                     border: 0;
-                    position: relative;
+
                     transition: all 0.4s ease-out;
                     @media only screen and (max-width: 768px) {
                         font-size: 36px;
