Modal content formatting and styling

--- a/src/style/css/index.scss
+++ b/src/style/css/index.scss
@@ -1,5 +1,6 @@
 @import 'style.css';
 @import 'layout.css';
+@import 'variables.css';
 @import 'nav.css';
 @import 'home.css';
 @import 'portfolio.css';
