--- a/src/style/css/portfolio.scss
+++ b/src/style/css/portfolio.scss
@@ -24,7 +24,8 @@
         flex-wrap: wrap;
         justify-content: center;
     }
-    .card-modal {
+    .modal-container {
+        overflow-y: auto;
         z-index: 160;
         position: fixed;
         top: 60px;
@@ -36,6 +37,37 @@
         color: rgb(20, 20, 20);
         border-radius: 4px;
         box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.6);
+        text-align: left;
+
+        h1 {
+            font-weight: 500;
+            margin-top: 16px;
+            margin-bottom: 0;
+        }
+
+        .logo {
+            img {
+                width: 100%;
+            }
+        }
+
+        .remark {
+            margin: 24px 0;
+            padding: 4px 0px;
+            padding-left: 16px;
+            box-shadow: inset 4px 0px 0px 0px #2196F3;
+            font-style: italic;
+            font-size: 17px;
+            color: rgba(75, 75, 90, 1);
+
+            .author {
+                color: rgba(75, 75, 90, 0.6);
+
+                &:before {
+                    content: ' – ';
+                }
+            }
+        }
     }
 
     .card {
