Load screenshots from file and display them.

--- a/src/style/css/contact.scss
+++ b/src/style/css/contact.scss
@@ -46,20 +46,20 @@
 .contact .social a:hover {
     box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.6);
 }
-.fa-facebook {
+a.fa-facebook {
     color: #fff;
     background-color: #3b5998;
 }
-.fa-snapchat-ghost {
+a.fa-snapchat-ghost {
     color: #fff;
     background-color: #fffc00;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-.fa-instagram {
+a.fa-instagram {
     color: #fff;
     background-color: #e95950;
 }
-.fa-github {
+a.fa-github {
     color: #fff;
     background-color: #24292e;
 }
