--- a/src/style/css/portfolio.scss
+++ b/src/style/css/portfolio.scss
@@ -24,6 +24,25 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+    .image-scroll {
+        .thumbnail-container {
+            position: relative;
+            height: 22vw;
+            min-height: 200px;
+            padding: 10px 0;
+            white-space: nowrap;
+            overflow-y: hidden;
+            overflow-x: auto;
+            text-align: center;
+
+            img {
+                display: inline-block;
+                object-fit: contain;
+                height: 100%;
+                margin: 0 6px;
+            }
+        }
+    }
     .modal-container {
         overflow-y: auto;
         z-index: 160;
@@ -38,45 +57,54 @@
         border-radius: 4px;
         box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.6);
         text-align: left;
+        // display: none;
 
-        h1 {
-            font-weight: 500;
-            margin-top: 0px;
-            margin-bottom: 0px;
-        }
+        .summary {
 
-        .logo {
+            h1 {
+                font-weight: 500;
+                margin-top: 0px;
+                margin-bottom: 0px;
+            }
+
             img {
                 width: 100%;
             }
-        }
 
-        .remark-container {
-            margin: 4px 0;
-            margin-bottom: 10px;
-            padding: 8px 0;
-            max-height: 12vw;
-            border-radius: 4px;
-            box-shadow: inset -2px 0px 16px 0px rgba(0, 0, 0, 0.3);
-            overflow-y: auto;
-            overflow-x: visible;
-        }
+            .remark-container {
+                margin: 4px 0;
+                margin-bottom: 10px;
+                max-height: 16vw;
+                border-radius: 4px;
+                overflow-y: auto;
+                overflow-x: visible;
 
-        .remark {
-            margin: 10px 0;
-            padding: 4px 0px;
-            padding-left: 16px;
-            box-shadow: inset 4px 0px 0px 0px rgba(33, 150, 244, 0.7);
-            font-style: italic;
-            font-size: 17px;
-            color: rgba(75, 75, 90, 1);
+                @media only screen and (max-width: 1000px) {
+                    max-height: 12vw;
+                }
+            }
 
-            .author {
-                color: rgba(75, 75, 90, 0.6);
-                white-space: nowrap;
+            .remark {
+                margin: 10px 0;
+                padding: 6px 0px;
+                padding-left: 16px;
+                box-shadow: inset 4px 0px 0px 0px rgba(33, 150, 244, 0.7);
+                font-style: italic;
+                font-size: 18px;
+                color: rgba(75, 75, 90, 1);
+                transition: box-shadow 0.2s, background-color 0.2s;
 
-                &:before {
-                    content: ' – ';
+                &:hover {
+                    background-color: rgba(0, 0, 0, 0.05);
+                    box-shadow: inset 4px 0px 0px 0px rgba(33, 150, 244, 1);
+                }
+                .author {
+                    color: rgba(75, 75, 90, 0.6);
+                    white-space: nowrap;
+
+                    &:before {
+                        content: ' – ';
+                    }
                 }
             }
         }
