--- a/src/style/css/portfolio.scss
+++ b/src/style/css/portfolio.scss
@@ -33,6 +33,7 @@
             overflow-x: auto;
             text-align: center;
             position: relative;
+            transition: height 0.2s;
 
             &.expanded {
                 height: 520px;
@@ -42,9 +43,13 @@
                 height: 100%;
 
                 img {
+                    object-fit: contain;
                     display: inline-block;
-                    height: 100%;
-                    margin: 0px 4px;
+                    max-width: 100%;
+                    max-height: 100%;
+                    width: auto;
+                    height: auto;
+                    margin: 0px 2px;
                 }
             }
 
@@ -212,10 +217,10 @@
                     width: 100%;
                 }
             }
+        }
 
-            .remark-container {
-                margin: 4px 0;
-            }
+        .remark-container {
+            margin: 4px 0;
 
             .remark {
                 margin: 10px 0;
