--- a/src/style/css/index.scss
+++ b/src/style/css/index.scss
@@ -3,7 +3,7 @@
 @import 'variables.css';
 @import 'nav.css';
 @import 'home.css';
-@import 'portfolio.css';
+@import 'projects.css';
 @import 'contact.css';
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,300,400,500,700');
